# costcut-ai

./: .gitignore  Cargo.toml  README.md
src/: analyzer.rs  config.rs  launcher.rs  main.rs  mcp.rs  providers.rs  selector.rs  setup.rs
