[package]
name = "costcut"
version = "0.1.0"
edition = "2021"
description = "Intelligent model switcher — analyzes request complexity and routes to the best available AI model across Claude Code, OpenCode, and Pi."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
which = "6.0"
